fix: use Dockerfile for Railway deployment
- Created multi-stage Dockerfile to handle both Node.js and Python
- Stage 1: Build React frontend with Node 18
- Stage 2: Use Python 3.12 with built frontend and backend
- Fixes npm not found error by explicitly installing Node.js first
- Updated railway.toml to use Dockerfile instead of nixpacks
- Railway will now properly handle mixed frontend/backend build

--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,5 @@
 [build]
-builder = "nixpacks"
-buildCommand = "npm install --prefix frontend && npm run build --prefix frontend && pip install -r backend/requirements.txt"
+dockerfile = "Dockerfile"
 
 [start]
-cmd = "cd backend && python app.py"
-restartPolicyType = "always"
-
-[deploy]
-startCommand = "cd backend && python app.py"
+cmd = "cd backend && gunicorn --bind 0.0.0.0:$PORT --timeout 120 --workers 2 app:app"
